--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1097,6 +1097,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap>com.liferay.portal.search.elasticsearch6.impl.jar!commons-logging.jar</td><td nowrap>1.2</td><td nowrap><a href="http://commons.apache.org/proper/commons-logging/">Apache Commons Logging</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap>com.liferay.portal.search.elasticsearch6.impl.jar!elasticsearch-cli.jar</td><td nowrap>6.8.6</td><td nowrap><a href="https://github.com/elastic/elasticsearch">org.elasticsearch#cli;6.8.6</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -1208,6 +1213,11 @@
 </tr>
 <tr>
 <td nowrap>com.liferay.portal.search.elasticsearch6.impl.jar!log4j-core.jar</td><td nowrap>2.11.2</td><td nowrap><a href="https://www.apache.org/">Apache Log4j Core</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap>com.liferay.portal.search.elasticsearch6.impl.jar!log4j.jar</td><td nowrap>1.2.17</td><td nowrap><a href="http://logging.apache.org/log4j/1.2/">Apache Log4j</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -2047,6 +2057,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap>com.liferay.web.proxy.web.jar!concurrent.jar</td><td nowrap>1.3.4</td><td nowrap>Dough Lea's util.concurrent package</td><td nowrap><a href=">http://gee.cs.oswego.edu/dl/classes/EDU/oswego/cs/dl/util/concurrent/intro.html">Public domain, Sun Microsoystems</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap>com.liferay.web.proxy.web.jar!org.portletbridge.core.jar</td><td nowrap>1.1.2</td><td nowrap>org.portletbridge</td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
@@ -2575,6 +2590,16 @@
 				</td>
 </tr>
 <tr>
+<td nowrap>lib/portal/axiom-api.jar</td><td nowrap>1.2.20</td><td nowrap><a href="http://ws.apache.org/commons/axiom">Axiom</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap>lib/portal/axiom-impl.jar</td><td nowrap>1.2.20</td><td nowrap><a href="http://ws.apache.org/commons/axiom">Axiom</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap>lib/portal/axis-ant.jar</td><td nowrap>1.4</td><td nowrap><a href="http://ws.apache.org/axis">Axis</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td></td>
@@ -2877,7 +2902,7 @@
 </td><td></td>
 </tr>
 <tr>
-<td nowrap>lib/portal/isoparser.jar</td><td nowrap>1.1.22</td><td nowrap><a href="http://code.google.com/p/mp4parser">ISO Parser</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<td nowrap>lib/portal/isoparser.jar</td><td nowrap>1.9.41.2</td><td nowrap><a href="http://code.google.com/p/mp4parser">ISO Parser</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -3475,12 +3500,12 @@
 </td><td></td>
 </tr>
 <tr>
-<td nowrap>lib/portal/tika-core.jar</td><td nowrap>1.24</td><td nowrap><a href="http://tika.apache.org">Tika</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<td nowrap>lib/portal/tika-core.jar</td><td nowrap>1.24.1</td><td nowrap><a href="http://tika.apache.org">Tika</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td></td>
 </tr>
 <tr>
-<td nowrap>lib/portal/tika-parsers.jar</td><td nowrap>1.24</td><td nowrap><a href="http://tika.apache.org">Tika</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+<td nowrap>lib/portal/tika-parsers.jar</td><td nowrap>1.24.1</td><td nowrap><a href="http://tika.apache.org">Tika</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
 <br>
 </td><td></td>
 </tr>
